--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home": "https://sai-chandu-544.github.io/Dental-Services-Frontend",
+  "home": "https://Sai-Chandu-544.github.io/Dental-Services-Frontend",
   "name": "dental_services",
   "version": "0.1.0",
   "private": true,
