--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://sai-chandu-544.github.io/Dental-Services-Frontend",
-  "name": "dental_services",
+  "homepage": "https://Sai-Chandu-544.github.io/Dental-Services-Frontend",
+  "name": "dental-services",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
