--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "homepage": "https://Sai-Chandu-544.github.io/Dental-Services-Frontend",
+ "homepage": "https://sai-chandu-544.github.io/Dental-Services-Frontend",
+
   "name": "dental-services",
   "version": "0.1.0",
   "private": true,
